plugins {
  id 'java'
  id 'org.jetbrains.intellij.platform' version '2.10.5'
}

group 'com.github.tarn2206'
version '2.1.0'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()

  intellijPlatform {
    defaultRepositories()
  }
}

dependencies {
  intellijPlatform {
    intellijIdeaCommunity '2023.1'
    bundledPlugins("com.intellij.java", "com.intellij.gradle", "org.jetbrains.android")
    instrumentationTools()
    pluginVerifier()
  }
  implementation gradleApi()
  compileOnly 'org.projectlombok:lombok:1.18.38'
  annotationProcessor 'org.projectlombok:lombok:1.18.38'
  testImplementation 'junit:junit:4.13.2'
}

import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
import org.jetbrains.intellij.platform.gradle.models.ProductRelease

// https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html#intellijPlatform-pluginVerification-ides
// https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#platformVersions
intellijPlatform {
  pluginVerification {
    ides {
      recommended()
      select {
        it.types = [IntelliJPlatformType.IntellijIdeaCommunity]
        it.channels = [ProductRelease.Channel.RELEASE]
        it.sinceBuild = '231'
        it.untilBuild = '253.*'
      }
    }
  }
}

buildSearchableOptions.enabled = false

patchPluginXml {
  sinceBuild = "231"
  untilBuild = provider { null }
  changeNotes = """
<h2>2.1.0</h2>
<ul>
    <li>Fix TreeUI should be accessed only from EDT</li>
</ul>
<h2>2.0.2</h2>
<ul>
    <li>Improve running background tasks</li>
</ul>
<h2>2.0.1</h2>
<ul>
    <li>Fix plugin not available for new version of IntelliJ</li>
</ul>
<h2>2.0.0</h2>
<ul>
    <li>Upgrade to IntelliJ Platform Gradle Plugin (2.x)</li>
</ul>
<h2>1.6.4</h2>
<ul>
    <li>Remove deprecated and internal api usage</li>
</ul>
<h2>1.6.3</h2>
<ul>
    <li>Support authenticate private maven repository by include credentials in the URL<br>https://username:password@your-repo.com/</li>
    <li>Improve Android project support</li>
</ul>
<h2>1.6.2</h2>
<ul>
    <li>Fix tool window title</li>
</ul>
<h2>1.6.1</h2>
<ul>
    <li>Fix not detect android test implementation</li>
    <li>Resolve conflict tool window name</li>
</ul>
<h2>1.6</h2>
<ul>
    <li>Support custom maven repository</li>
    <li>Filtering unstable versions</li>
</ul>
<h2>1.5.2</h2>
<ul>
    <li>Move refresh action from popup menu to tool window title</li>
    <li>Remove close button from tool window title</li>
</ul>
<h2>1.5.1</h2>
<ul>
    <li>Support a prefix version range: e.g. 1.+, 1.3.+</li>
    <li>Fix bug android projects not show dependencies</li>
</ul>
<h2>1.5</h2>
<ul>
    <li>Support nested-project</li>
    <li>Prevent multiple check update for same dependency</li>
    <li>Resolve existing tool window name</li>
</ul>
<h2>1.4</h2>
<ul>
    <li>Support multi-project build</li>
    <li>Remove require dependencies plugins</li>
</ul>
"""
}
